--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next-auth/fauna-adapter": "^0.2.2-next.13",
     "faunadb": "^4.4.1",
     "next": "11.1.2",
-    "next-auth": "^4.0.0-beta.2",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "sass": "^1.42.1",
-    "stripe": "^8.176.0"
+    "sass": "^1.42.1"
   },
   "devDependencies": {
     "@types/node": "^16.10.1",
