--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.18.0",
+    "axios": "^0.21.4",
     "faunadb": "^4.4.1",
     "next": "11.1.2",
     "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1",
+    "stripe": "^8.177.0"
   },
   "devDependencies": {
     "@types/node": "^16.10.1",
